deployments/todo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
  labels:
    app: todo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: jxlwqq/todo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
          volumeMounts:
            - mountPath: /configs # 使用 configmap 覆盖默认的配置文件
              name: todo
          readinessProbe:
            exec:
              command: [ "/grpc-health-probe", "-addr=:50051" ]
          livenessProbe:
            exec:
              command: [ "/grpc-health-probe", "-addr=:50051" ]
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: todo
          configMap:
            name: todo
---
apiVersion: v1
kind: Service
metadata:
  name: todo
  labels:
    app: todo
spec:
  selector:
    app: todo
  ports:
    - name: grpc # important!
      port: 50051
      targetPort: 50051
